# kostka

./: .mxproject  CMakeLists.txt  Kostka-STM.ioc  README.md
Core/Inc/: adxl345.h  app.h  l3g4200d.h  main.h  max7219.h  sensor.h  spi_device.h
Core/Src/: adxl345.cpp  app.cpp  l3g4200d.cpp  main.c  max7219.cpp  sensor.cpp  spi_device.cpp
cmake/stm32cubemx/: CMakeLists.txt
main/: CMakeLists.txt  adxl345.cpp  adxl345.h  bt_spp_server.cpp  bt_spp_server.h  command_processor.cpp  command_processor.h  l3g4200d.cpp  l3g4200d.h  main.cpp  max7219.cpp  max7219.h  sensor.cpp  sensor.h  spi_device.cpp  spi_device.h  wifi_tcp_server.cpp  wifi_tcp_server.h
